--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,36 @@ body {
 
 h1 {
     margin-top: 40px;
+    border-top: 2px solid hsla(0, 1%, 35%, 0.5);
+    padding: 10px;
 }
 
 
+.header{
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+
+}
+
 .nav-list{
   list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
+
+}
+.li{
+  margin-left: 10px;
+  font-size: 1.1rem;
+}
+
+
+.img{
+  padding: 3px;
+  width: 55px;
+  border-radius: 50%;
+  border: 1px solid white;
 }
