--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,3 @@
-*{
-  padding: 0;
-  margin: 0;
+html, body {
+    margin: 0;
 }
-
-
-body {
-    padding: 10px;
-    min-height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-    background: #27292c;
-    color: white;
-    display: flex;
-    /* flex-grow: 1; */
-    flex-direction: column;
-    /* text-align: center; */
-}
-
-#root{
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.maincontent{
-  flex:1;
-}
-
-
-h1 {
-    margin-top: 40px;
-    border-top: 2px solid hsla(0, 1%, 35%, 0.5);
-    padding: 10px;
-}
-
-
-.header{
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-
-}
-
-.nav-list{
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
-  padding: 20px;
-  /* flex-grow: 1; */
-
-}
-.li{
-  margin-left: 10px;
-  font-size: 1.1rem;
-}
-
-
-.img{
-  padding: 3px;
-  width: 55px;
-  border-radius: 50%;
-  border: 1px solid white;
-}
-
-/* 
-.footer{
-  align-items: center;
-} */
