--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     align-items: center;
     font-family: 'Inter', sans-serif;
-    background-color: whitesmoke;
+    background-color: rgb(88, 98, 167);
 }
 
 .contacts {
